<resources>
    <string name="app_name">Kampus</string>
    <string name="action_settings">Settings</string>
    <string name="menus">Menus</string>
    <string name="map">Map</string>
    <string name="News">News</string>
    <string name="directory">Directory</string>
    <string name="about_us">About</string>
    <string name="book_room">Room</string>
    <string name="title_activity_menus">Menus</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_about">About us</string>
    <string name="title_activity_room_booking">Room Booking</string>
    <string name="title_activity_directory">Directory</string>
    <string name="title_activity_news">News</string>
    <string name="developed_by">Developed by</string>
    <string name="perseas">Perséas Charoud-Got</string>
    <string name="alain">Alain Birchmeier</string>
    <string name="pierre">Pierre Fleitz</string>
    <string name="louis">Louis Baligan</string>
    <string name="clement">Clément Gaboriau--Couanau</string>
    <string name="enter_name">Enter name</string>
    <string name="search">Search</string>
    <string name="where">Where</string>
    <string name="what_time">What time</string>
    <string name="which_day">Which day</string>
    <string name="cancel">Cancel</string>
    <string name="book">Book</string>
    <string name="title_activity_new_browser">News</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_contact">Contact</string>
    <string name="works_for">Works for</string>
    <string name="email">E-mail</string>
    <string name="telephone">Telephone</string>
    <string name="address">Address</string>
    <string name="link">link</string>
    <string name="name">Name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="language">Language</string>
    <string name="save_changes">Save changes</string>
    <string name="contact">Contact</string>
    <string name="contact_mail">kampus@kth.se</string>
    <string name="schedule_link">Schedule url</string>
    <string name="enter_link">Enter link</string>
</resources>
