<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kth.se.kampus.AboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/developed_by"
        android:text="@string/developed_by"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:padding="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/perseas"
        android:text="@string/perseas"
        android:layout_below="@+id/developed_by"
        android:layout_centerHorizontal="true"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alain"
        android:text="@string/alain"
        android:layout_below="@+id/perseas"
        android:layout_centerHorizontal="true"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pierre"
        android:text="@string/pierre"
        android:layout_below="@+id/alain"
        android:layout_centerHorizontal="true"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/louis"
        android:text="@string/louis"
        android:layout_below="@+id/pierre"
        android:layout_centerHorizontal="true"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clement"
        android:text="@string/clement"
        android:layout_below="@+id/louis"
        android:layout_centerHorizontal="true"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_below="@+id/clement"
        android:layout_centerHorizontal="true"
        android:paddingTop="35dp"
        android:textStyle="bold"
        android:id="@+id/contact_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_label"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:autoLink="web"
        android:text="@string/contact_mail"/>


</RelativeLayout>
